# ckanext-um_biostat_theme

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/um_biostat_theme/: plugin.py
ckanext/um_biostat_theme/assets/: script.js  webassets.yml
ckanext/um_biostat_theme/public/: um_biostat_theme.css
ckanext/um_biostat_theme/templates/: base.html
ckanext/um_biostat_theme/templates/home/: index.html
ckanext/um_biostat_theme/templates/home/snippets/: promoted.html
ckanext/um_biostat_theme/tests/: test_plugin.py
