[project]
name = "ckanext-um_biostat_theme"
version = "0.0.1"
description = "CKAN theme for UM-Biostat"
readme = "README.md"
authors = [
    {name = "Jacob Gladfelter", email = "jglad@umich.edu"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "theme", "biostat", "umich", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/um-jglad/ckanext-um_biostat_theme"

[project.entry-points."ckan.plugins"]
um_biostat_theme = "ckanext.um_biostat_theme.plugin:UmBiostatThemePlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
